--- a/css/style-historia.css
+++ b/css/style-historia.css
@@ -187,7 +187,7 @@ img {
 /* Estilos del Main */
 .history {
     padding: 100px 0;
-    background-color: rgba(0, 0, 0, 0.6);;
+    background-color: rgba(0, 0, 0, 0.6);
     color: #c5c6c7;
     display: flex;
     flex-direction: column;
