--- a/css/style-multimedia.css
+++ b/css/style-multimedia.css
@@ -185,3 +185,78 @@ img {
 
 
 /* ----------------- */
+
+.multimedia{
+    background-color: rgba(0, 0, 0, 0.6);
+
+}
+main.multimedia {
+    max-width: 100vW;
+    margin: 0px auto;
+    padding: 50px;
+}
+
+section {
+    margin-bottom: 30px;
+}
+
+h2 {
+    color: #FFFFFF;
+    text-align: center;
+    margin-bottom: 30px;
+    margin-top: 100px
+}
+
+#title{
+    margin-top: 10px;
+}
+
+.image-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.image-item {
+    width: 600px;
+    margin: 10px;
+    text-align: center;
+    
+}
+
+.image-item img {
+    max-width: 100%;
+    height: 100%;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    border-radius: 2%;
+    border: #333 solid 9px;
+}
+
+.video-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.video-item {
+    width: 100%;
+    max-width: 800px;
+    margin: 20px auto;
+    text-align: center;
+}
+
+.video-item iframe {
+    width: 100%;
+    height: 315px; /* Ajusta la altura según necesites */
+}
+
+@media (max-width: 768px) {
+    .image-item {
+        width: 100%;
+    }
+
+    .video-item {
+        max-width: 100%;
+    }
+}
