--- a/css/style-multimedia.css
+++ b/css/style-multimedia.css
@@ -260,3 +260,11 @@ h2 {
         max-width: 100%;
     }
 }
+
+footer{
+    text-align: center;
+    padding: 20px;
+    background-color: #111;
+    margin-top: 0px;
+    color: white;
+}
