--- a/css/style-historia.css
+++ b/css/style-historia.css
@@ -20,7 +20,7 @@ body {
 
 
 
-/* ------------------------------------------------------------- */
+/* -------------------------------HEADER------------------------------ */
 img {
     max-width: 100%;
 }
@@ -184,7 +184,7 @@ img {
 }
 
 
-/* Estilos del Main */
+/* Main */
 .history {
     padding: 100px 0;
     background-color: rgba(0, 0, 0, 0.6);
@@ -236,7 +236,7 @@ img {
     line-height: 1.5;
 }
 
-/* Estilos responsivos */
+/* RESPONSIVE */
 @media (max-width: 1200px) {
     .history-content {
         padding: 0 20px;
