--- a/css/style-juegos.css
+++ b/css/style-juegos.css
@@ -186,7 +186,7 @@ img {
 
  /* -----------------------------------main--------------------------------------- */
 
-/* CSS para el main */
+/* main */
 .games, .shadows {
     padding: 50px 15px;
     text-align: center;
