--- a/css/style-login.css
+++ b/css/style-login.css
@@ -30,7 +30,7 @@ body {
     text-align: center;
 }
 
-h1 {
+.login-container h1 {
     margin-bottom: 20px;
     font-size: 32px;
     color: tomato;
@@ -65,6 +65,7 @@ h1 {
 
 .login-button {
     display: inline-block;
+    margin-top: 15px;
     padding: 10px 20px;
     color: white;
     background: linear-gradient(
@@ -92,6 +93,7 @@ h1 {
 
 p {
     margin-top: 20px;
+    color: #fff;
 }
 
 p a {
@@ -102,4 +104,10 @@ p a {
 
 p a:hover {
     text-decoration: underline;
+}
+
+.login-container h3 {
+    margin-bottom: 20px;
+    padding:15px;
+    color: #fff;
 }
