--- a/css/style-personajes.css
+++ b/css/style-personajes.css
@@ -15,14 +15,7 @@ body {
     background-position: center;
     background-attachment: fixed;
     font-family: "Wittgenstein", serif;
-    color: #fff; /* Se cambió el color por defecto para mayor contraste */
-}
-
-
-
-/* ----------------------------HEADER--------------------------------- */
-img {
-    max-width: 100%;
+    color: #fff; 
 }
 
 .container {
@@ -40,7 +33,6 @@ img {
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
-    
     align-items: center;
     min-height: 9vh;
     max-width: 100vw;
@@ -64,8 +56,6 @@ img {
     font-weight: 800;
     text-transform: uppercase;
 }
-
-
 
 .menu .navbar ul {
     display: flex;
@@ -102,13 +92,10 @@ img {
     display: none;
 }
 
-
-#login{
+#login {
     display: inline-block;
     padding: 1px 10px;
     margin: 20px;
-    
-
     color: white;
     text-transform: uppercase;
     background: linear-gradient(
@@ -122,7 +109,7 @@ img {
     transition: background 0.3s ease;
 }
 
-#login:hover{
+#login:hover {
     background: linear-gradient(
         90deg,
         rgba(126, 111, 94, 0.761) 20%,
@@ -183,14 +170,6 @@ img {
     }
 }
 
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style: none;
-}
 
 body {
     background-image: url(/images/fondo.jpg);
