--- a/css/style-tienda.css
+++ b/css/style-tienda.css
@@ -33,6 +33,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
+    
     align-items: center;
     min-height: 9vh;
     max-width: 100vw;
@@ -56,6 +57,8 @@ body {
     font-weight: 800;
     text-transform: uppercase;
 }
+
+
 
 .menu .navbar ul {
     display: flex;
@@ -92,10 +95,13 @@ body {
     display: none;
 }
 
-#login {
+
+#login{
     display: inline-block;
     padding: 1px 10px;
     margin: 20px;
+    
+
     color: white;
     text-transform: uppercase;
     background: linear-gradient(
@@ -109,12 +115,65 @@ body {
     transition: background 0.3s ease;
 }
 
-#login:hover {
+#login:hover{
     background: linear-gradient(
         90deg,
         rgba(126, 111, 94, 0.761) 20%,
         rgba(245, 72, 72, 0.818) 100%
     );
+}
+
+@media (max-width: 768px) {
+    .header {
+        background-position: center;
+        padding: 55px 0;
+    }
+
+    .menu {
+        flex-direction: column;
+    }
+
+    .menu .navbar {
+        display: none;
+        width: 100%;
+    }
+
+    .menu label {
+        display: block;
+        color: white;
+    }
+
+    #menu:checked ~ .navbar {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .menu .navbar ul {
+        flex-direction: column;
+        width: 100%;
+        background-color: rgba(0, 0, 0, 0.9);
+    }
+
+    .menu .navbar ul li {
+        width: 100%;
+        text-align: center;
+    }
+
+    .menu .navbar ul li a {
+        width: 100%;
+        padding: 15px 0;
+    }
+}
+
+@media (max-width: 480px) {
+    .btn-1 {
+        padding: 12px 20px;
+        font-size: 14px;
+    }
+    #login{
+        width: 60vw;
+    }
 }
 
 /* Main */
