--- a/css/style-carrito-compras.css
+++ b/css/style-carrito-compras.css
@@ -120,3 +120,66 @@
 .checkout-button:hover {
     background: linear-gradient(90deg, rgba(126, 111, 94, 0.761) 20%, rgba(245, 72, 72, 0.818) 100%);
 }
+
+
+/* responsive  */
+
+@media (max-width: 768px) {
+    .cart-container {
+        top: 150px;
+        right: 15px;
+        width: 50px;
+        height: 50px;
+    }
+
+    .cart-icon {
+        width: 30px;
+        height: 30px;
+    }
+
+    .cart {
+        width: 90%;
+        bottom: 20px;
+        right: 5%;
+        padding: 15px;
+    }
+
+    .cart-items {
+        max-height: 150px;
+    }
+    
+    .checkout-button {
+        font-size: 14px;
+        padding: 8px 16px;
+    }
+}
+
+@media (max-width: 480px) {
+    .cart-container {
+        top: 100px;
+        right: 10px;
+        width: 40px;
+        height: 40px;
+    }
+
+    .cart-icon {
+        width: 25px;
+        height: 25px;
+    }
+
+    .cart {
+        width: 95%;
+        bottom: 10px;
+        right: 2.5%;
+        padding: 10px;
+    }
+
+    .cart-items {
+        max-height: 100px;
+    }
+
+    .checkout-button {
+        font-size: 12px;
+        padding: 6px 12px;
+    }
+}
