--- a/css/style-historia.css
+++ b/css/style-historia.css
@@ -20,7 +20,7 @@ body {
 
 
 
-/* -------------------------------HEADER------------------------------ */
+/* ------------------------------------------------------------- */
 img {
     max-width: 100%;
 }
@@ -85,6 +85,14 @@ img {
     display: block;
 }
 
+.menu .navbar ul li strong {
+    font-size: 22px;
+    font-weight: 600;
+    padding: 20px;
+    color: rgb(226, 30, 8);
+    display: block;
+}
+
 .menu .navbar ul li a:hover {
     color: tomato;
 }
@@ -103,7 +111,7 @@ img {
 }
 
 
-#login{
+#login-link, #logout-button{
     display: inline-block;
     padding: 1px 10px;
     margin: 20px;
@@ -122,7 +130,7 @@ img {
     transition: background 0.3s ease;
 }
 
-#login:hover{
+#login-link:hover, #logout-button:hover{
     background: linear-gradient(
         90deg,
         rgba(126, 111, 94, 0.761) 20%,
@@ -130,10 +138,50 @@ img {
     );
 }
 
+.header-text {
+    color: white;
+    padding: 0 200px;
+}
+
+.header-text h1 {
+    text-align: left;
+    font-size: 100px;
+    line-height: 1;
+}
+
+p {
+    font-size: 17px;
+    color: rgb(228, 228, 228);
+    margin-bottom: 15px;
+}
+
+.btn-1 {
+    display: inline-block;
+    padding: 11px 35px;
+    color: white;
+    text-transform: uppercase;
+    background: linear-gradient(
+        90deg,
+        rgba(245, 99, 72, 1) 20%,
+        rgba(254, 148, 32, 1) 100%
+    );
+    border: none;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
+.btn-1:hover {
+    background: linear-gradient(
+        90deg,
+        rgba(254, 148, 32, 1) 20%,
+        rgba(245, 99, 72, 1) 100%
+    );
+}
+
 @media (max-width: 768px) {
     .header {
         background-position: center;
-        padding: 55px 0;
+        padding: 50px 0;
     }
 
     .menu {
@@ -159,7 +207,7 @@ img {
     .menu .navbar ul {
         flex-direction: column;
         width: 100%;
-        background-color: rgba(0, 0, 0, 0.9);
+        background-color: rgba(0, 0, 0, 0.7);
     }
 
     .menu .navbar ul li {
@@ -171,15 +219,37 @@ img {
         width: 100%;
         padding: 15px 0;
     }
+
+    .header-text {
+        padding: 0 20px;
+        text-align: center;
+    }
+
+    .header-text h1 {
+        font-size: 50px;
+    }
+    #login-link, #logout-button{
+        width: 60vw;
+
+    }
 }
 
 @media (max-width: 480px) {
-    .btn-1 {
-        padding: 12px 20px;
+    .header-text h1 {
+        font-size: 35px;
+    }
+
+    .header-text p {
         font-size: 14px;
     }
-    #login{
+
+    .btn-1 {
+        padding: 10px 20px;
+        font-size: 14px;
+    }
+    #login-link, #logout-button{
         width: 60vw;
+
     }
 }
 
