--- a/css/style-personajes.css
+++ b/css/style-personajes.css
@@ -15,7 +15,14 @@ body {
     background-position: center;
     background-attachment: fixed;
     font-family: "Wittgenstein", serif;
-    color: #fff; 
+    color: #fff; /* Se cambió el color por defecto para mayor contraste */
+}
+
+
+
+/* ------------------------------------------------------------- */
+img {
+    max-width: 100%;
 }
 
 .container {
@@ -33,6 +40,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
+    
     align-items: center;
     min-height: 9vh;
     max-width: 100vw;
@@ -57,6 +65,8 @@ body {
     text-transform: uppercase;
 }
 
+
+
 .menu .navbar ul {
     display: flex;
     margin: 0;
@@ -72,6 +82,14 @@ body {
     font-weight: 600;
     padding: 20px;
     color: #FFFFFF;
+    display: block;
+}
+
+.menu .navbar ul li strong {
+    font-size: 22px;
+    font-weight: 600;
+    padding: 20px;
+    color: rgb(226, 30, 8);
     display: block;
 }
 
@@ -92,10 +110,13 @@ body {
     display: none;
 }
 
-#login {
+
+#login-link, #logout-button{
     display: inline-block;
     padding: 1px 10px;
     margin: 20px;
+    
+
     color: white;
     text-transform: uppercase;
     background: linear-gradient(
@@ -109,7 +130,7 @@ body {
     transition: background 0.3s ease;
 }
 
-#login:hover {
+#login-link:hover, #logout-button:hover{
     background: linear-gradient(
         90deg,
         rgba(126, 111, 94, 0.761) 20%,
@@ -117,10 +138,50 @@ body {
     );
 }
 
+.header-text {
+    color: white;
+    padding: 0 200px;
+}
+
+.header-text h1 {
+    text-align: left;
+    font-size: 100px;
+    line-height: 1;
+}
+
+p {
+    font-size: 17px;
+    color: rgb(228, 228, 228);
+    margin-bottom: 15px;
+}
+
+.btn-1 {
+    display: inline-block;
+    padding: 11px 35px;
+    color: white;
+    text-transform: uppercase;
+    background: linear-gradient(
+        90deg,
+        rgba(245, 99, 72, 1) 20%,
+        rgba(254, 148, 32, 1) 100%
+    );
+    border: none;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
+.btn-1:hover {
+    background: linear-gradient(
+        90deg,
+        rgba(254, 148, 32, 1) 20%,
+        rgba(245, 99, 72, 1) 100%
+    );
+}
+
 @media (max-width: 768px) {
     .header {
         background-position: center;
-        padding: 55px 0;
+        padding: 50px 0;
     }
 
     .menu {
@@ -146,7 +207,7 @@ body {
     .menu .navbar ul {
         flex-direction: column;
         width: 100%;
-        background-color: rgba(0, 0, 0, 0.9);
+        background-color: rgba(0, 0, 0, 0.7);
     }
 
     .menu .navbar ul li {
@@ -158,18 +219,39 @@ body {
         width: 100%;
         padding: 15px 0;
     }
+
+    .header-text {
+        padding: 0 20px;
+        text-align: center;
+    }
+
+    .header-text h1 {
+        font-size: 50px;
+    }
+    #login-link, #logout-button{
+        width: 60vw;
+
+    }
 }
 
 @media (max-width: 480px) {
-    .btn-1 {
-        padding: 12px 20px;
+    .header-text h1 {
+        font-size: 35px;
+    }
+
+    .header-text p {
         font-size: 14px;
     }
-    #login{
+
+    .btn-1 {
+        padding: 10px 20px;
+        font-size: 14px;
+    }
+    #login-link, #logout-button{
         width: 60vw;
+
     }
 }
-
 
 body {
     background-image: url(/images/fondo.jpg);
@@ -181,40 +263,6 @@ body {
     color: #fff;
 }
 
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 15px;
-}
-
-header .menu {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px;
-}
-
-header .logo {
-    font-size: 25px;
-    font-weight: 800;
-    color: tomato;
-}
-
-header .navbar ul {
-    display: flex;
-    gap: 20px;
-}
-
-header .navbar ul li a {
-    color: #fff;
-    font-size: 18px;
-    padding: 10px;
-    transition: color 0.3s;
-}
-
-header .navbar ul li a:hover {
-    color: tomato;
-}
 
 /*  main */
 
